# talOS

./: README.md  pyproject.toml
configs/: default.yaml
configs/examples/: hello_world.yaml
src/talos/: cli.py
src/talos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/talos/core/: controller.py  sandbox.py
src/talos/llm/: ollama_client.py
src/talos/tools/: __init__.py  base.py  code_writer.py  terminal.py
src/talos/utils/: logging.py  yaml_loader.py
tests/tools/: test_terminal.py
